Added src folder for JSX files with babel compilation to public/scripts folder

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "babel "
+    "build": "babel src -d public/scripts"
   },
   "author": "nur-sh",
   "license": "ISC",
