--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -w -d public/scripts"
+    "build": "babel src/app.js -w --out-file public/scripts/app.js"
   },
   "author": "nur-sh",
   "license": "ISC",
