--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/app.js -w --out-file public/scripts/app.js"
+    "build": "babel src/app.js -w --out-file public/scripts/app.js",
+    "build:it:visible": "babel src/playground/build-it-visible.js -w --out-file public/scripts/app.js"
   },
   "author": "nur-sh",
   "license": "ISC",
