--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/app.js -w --out-file public/scripts/app.js",
+    "serve": "live-server public/",
+    "build": "webpack",
+    "build:babel": "babel src/app.js -w --out-file public/scripts/app.js",
     "build:it:visible": "babel src/playground/build-it-visible.js -w --out-file public/scripts/app.js",
     "build:counter": "babel src/playground/counter.js -w --out-file public/scripts/app.js"
   },
   "author": "nur-sh",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "webpack": "^4.17.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "live-server": "^1.2.0"
   }
 }
