--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build": "webpack --watch --mode=development",
     "build:babel": "babel src/app.js -w --out-file public/scripts/app.js",
     "build:it:visible": "babel src/playground/build-it-visible.js -w --out-file public/scripts/app.js",
     "build:counter": "babel src/playground/counter.js -w --out-file public/scripts/app.js"
@@ -20,6 +20,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "live-server": "^1.2.0"
+    "live-server": "^1.2.0",
+    "webpack-cli": "^3.1.0"
   }
 }
