--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "nur-sh",
   "license": "ISC",
   "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "validator": "^10.7.0",
     "webpack": "^4.17.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
