--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public/",
-    "build": "webpack --watch --mode=development",
-    "build:babel": "babel src/app.js -w --out-file public/scripts/app.js",
-    "build:it:visible": "babel src/playground/build-it-visible.js -w --out-file public/scripts/app.js",
-    "build:counter": "babel src/playground/counter.js -w --out-file public/scripts/app.js"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server --mode=development"
   },
   "author": "nur-sh",
   "license": "ISC",
@@ -26,6 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.6"
   }
 }
